# HYPY

./: .dockerignore  .gitignore  Dockerfile  PARALLEL_BUILD_PLAN.md  README.md  UI.md  checkthis.md  modeltest.md
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/hanyupinyin/: MainActivity.kt
android-app/app/src/main/java/com/hanyupinyin/app/: HanYuPinYinApp.kt
android-app/app/src/main/java/com/hanyupinyin/app/data/: AppSettingsRepository.kt  BackendBaseUrlResolver.kt  BackendWarmupRepository.kt  SavedStudyRepository.kt  StudyPreferences.kt
android-app/app/src/main/java/com/hanyupinyin/app/navigation/: AppDestination.kt  AppNavGraph.kt
android-app/app/src/main/java/com/hanyupinyin/app/theme/: AppUi.kt  Theme.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
backend/: README.md  pyproject.toml  railway.toml
backend/app/: __init__.py  config.py  main.py
backend/app/clients/: __init__.py  openrouter.py
backend/app/routes/: analyze.py
backend/app/schemas/: __init__.py  contracts.py
backend/app/services/: __init__.py  annotation.py  language_options.py  pinyin.py  prompts.py
backend/han_yu_pin_yin_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: model_benchmark.py
backend/tests/: test_analyze_route.py  test_annotation_service.py  test_openrouter_client.py  test_openrouter_live.py  test_prompt_builders.py
backend/tests/fixtures/: ocr_text.txt
docs/: api-contract.md
(+17 files in other folders)
